refactor: Cleanup CSS classes, checkpoint 5

--- a/gui/css/classes.css
+++ b/gui/css/classes.css
@@ -56,17 +56,17 @@
 }
 
 .bold {
-	font-weight: bold;
+	font-weight: bold !important;
 }
 
 .none {
-	display: none;
+	display: none !important;
 }
 
 .opa0 {
-	opacity: 0;
+	opacity: 0 !important;
 }
 
 .opa1 {
-	opacity: 1;
+	opacity: 1 !important;
 }
