--- a/gui/css/base.css
+++ b/gui/css/base.css
@@ -11,11 +11,15 @@
 	display: flex;
 	flex-flow: row nowrap;
 	width: 100%;
-	/*height: calc(100% - 46px);*/
 	height: 100%;
 }
 
-@media (max-width: 700px) {
+.content {
+	width: 100%;
+	height: 100%;
+}
+
+@media (max-width: 700px) and (-webkit-device-pixel-ratio: 1) {
 	.app {
 		min-width: 100%;
 	}
