--- a/gui/css/components/sidebar.css
+++ b/gui/css/components/sidebar.css
@@ -1,104 +1,105 @@
 .sidebar {
+	background: #f7f6f8;
 	background: #fbfafc;
-	/*background: #f7f6f8;*/
 	min-width: 325px;
 	height: 100%;
-	border-right: 2px solid #ececec;
-	/*padding-top: 10px;*/
+	border-right: 1px solid #e5e5e5;
 	overflow: auto;
-	/*color: rgb(95, 95, 95);*/
+	color: rgb(135, 135, 135);
+	position: relative;
 }
 
-.sb-row {
+/* White double-border: [https://css-tricks.com/snippets/css/multiple-borders/]; */
+/* [https://css-tricks.com/forums/topic/solved-getting-before-element-to-obey-main-width-and-height-help/] */
+
+.sidebar:before {
+	content: " ";
+	position: absolute;
+	display: inline;
+
+	height: 100%;
+
+	right: 0;
+
+	border-right: 1px solid white;
+}
+
+/* ROW */
+
+.sidebar .divider {
+	border-bottom: 1px solid #f0f0f0;
+	padding: 5px 0px 15px 0px;
+}
+
+.sidebar .section {
+	padding: 15px 15px 5px 15px;
+	color: rgb(105, 105, 105);
+}
+
+.sidebar .row {
 	display: flex;
 	flex-flow: row nowrap;
-	color: #333333;
-	/*justify-content: start;*/
+	/*color: #333333;*/
 	justify-content: space-between;
 	align-items: center;
-	/*color: rgb(65, 65, 65);*/
-	/*font-weight: bold;*/
-	padding: 7px 7px 7px 15px;
+	padding: 2px 7px 2px 40px;
 }
 
-/*.sb-row:hover {
-	background: rgba(0, 0, 0, 0.05);
-}
-*/
-.sb-row-selected {
-	/*background: #327dff !important;*/
-	background: rgba(0, 0, 0, 0.05) !important;
-	/*color: #ffffff;*/
-	/*border-right: 4px solid rgb(26, 115, 232);*/
+.sidebar .selected,
+.sidebar .selected .label {
+	/*background: rgba(0, 0, 0, 0.05) !important;*/
+	background: rgb(16, 103, 222);
+	color: white !important;
 }
 
-.sb-row-selected .sb-row-icon-cont,
-.sb-row-selected .sb-label {
-	color: #333;
+.sidebar .selected .icon-cont,
+.sidebar .selected .label {
+	/* color: #333; */
 }
 
-.sb-label {
+.sidebar .label {
 	color: rgb(55, 55, 55);
 }
 
-.sb-row-icon-cont {
+.sidebar .icon-cont {
 	display: block;
 	margin-right: 5px;
 	width: 30px;
-	color: rgb(135, 135, 135);
+	/* color: rgb(135, 135, 135); */
 }
 
-.sb-row-icon-cont i {
+.sidebar .icon-cont i {
 	font-weight: bold;
 	font-size: 24px;
 }
 
-.entry-item {
+/* ENTRY */
+
+.sidebar .entries .item {
 	display: flex;
 	flex-flow: row nowrap;
 	justify-content: space-between;
-	padding: 5px 0 5px 52px;
+	padding: 2px 0 2px 77px;
 	width: 100%;
 }
 
-/*.entry-item:hover {
-	background: rgba(0, 0, 0, 0.035);
-}
-*/
-.item-active {
-	background: #327dff;
-	color: #ffffff;
-	border-radius: 5px;
-}
-
-.entry-icon {
-	display: none;
-	background-image: url("file_type_text@3x.png");
-	background-repeat: no-repeat;
-	background-position: center;
-	background-size: cover;
-	width: 30px;
-	height: 30px;
-	margin-right: 15px;
-}
-
-.entry-count {
-	padding: 2px 12px;
+.sidebar .entries .count {
+	padding: 0px 10px;
 	border-radius: 20px;
 	/*background: #327dff;*/
-	background: #a9b8d3;
 	background: rgb(29, 131, 246);
 	background: rgb(26, 115, 232);
+	background: #a9b8d3;
 	color: white;
 	font-weight: bold;
 	margin-right: 15px;
 	transform: scale(0.85);
 }
 
-/* Sidebar icon CSS arrows */
+/* CSS Arrows */
 
 /* [https://css-tricks.com/snippets/css/css-triangle/] */
-.arrow-right {
+/*.arrow-right {
 	margin-top: 8px;
 	width: 0;
 	height: 0;
@@ -114,3 +115,4 @@
 	border-right: 7px solid transparent;
 	border-top: 9px solid #7e7d7e;
 }
+*/
