--- a/gui/css/components/statusbar.css
+++ b/gui/css/components/statusbar.css
@@ -6,11 +6,39 @@
 	display: flex;
 	flex-flow: row nowrap;
 	justify-content: space-between;
-	padding: 7px 10px;
-	border-top: 2px solid rgb(237, 236, 238);
+	padding: 5px 10px;
+	border-top: 1px solid #e5e5e5;
 	background: #f7f6f8;
+	background: #fbfafc;
+	position: relative;
 }
 
-.update-btn-icon {
-	margin-right: 5px;
+.status:before {
+	content: " ";
+	position: absolute;
+	display: inline;
+
+	width: 100%;
+
+	top: 0;
+	left: 0;
+
+	border-top: 1px solid white;
+}
+
+/* BUTTON */
+
+.status .btn-update {
+	padding: 2px 10px;
+	font-size: 17px;
+	margin: -1px 0 0 10px;
+
+	display: flex;
+	flex-flow: row nowrap;
+	justify-content: center;
+	align-items: center;
+}
+
+.status .btn-icon {
+	margin-right: 10px;
 }
